# agentbuilder

./: .dockerignore  .env.example  .env.production  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  cloudbuild.yaml  deploy-all.sh  index.html  nginx.conf  package.json  tailwind.config.js
.github/: DEPLOYMENT_SETUP.md  PULL_REQUEST_TEMPLATE.md
agent-builder-github-mcp/: README.md  main.py  pyproject.toml  server.py
agent-builder-github-mcp/src/agent_builder_github_mcp/: __init__.py
agent-builder-github-mcp/src/agent_builder_github_mcp/integrations/: __init__.py  claude_code.py  integration.py  neon_db.py  openrouter.py
agent-builder-github-mcp/src/agent_builder_github_mcp/tools/: __init__.py  action.py  analytics.py  branch.py  collaboration.py  commit.py  deployment.py  file_sync.py  issue.py  organization.py  pull_request.py  repository.py  security.py  user.py  webhook.py
agent-builder-github-mcp/src/agent_builder_github_mcp/utils/: __init__.py
backend/: .env.example  .env.production  DEPLOY.md  Dockerfile  app.yaml  cloudbuild.yaml  deploy.sh  package-lock.json  package.json  server.js  service.yaml
code-server/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
docs/: claude_code_research.md  content-structure-plan.md  design-specification.md  design-tokens.json  mobile_first_ios_transformation_strategy.md
memories/: research_plan_agent_builder.md  research_plan_agent_builder_platform.md  research_plan_agent_builder_platforms.md  research_plan_agent_configuration.md  (+20 more)
public/: sw.js  (+1 more)
(+77 files in other folders)
